@@ -14,19 +14,33 @@ import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+import com.cm.astb.security.CustomUserDetailsService;
+import com.cm.astb.security.JwtAuthenticationFilter;
+import com.cm.astb.security.JwtTokenProvider;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 	
+	private final JwtTokenProvider jwtTokenProvider;
+	private final CustomUserDetailsService customUserDetailsService;
+	
+	public SecurityConfig(JwtTokenProvider jwtTokenProvider, CustomUserDetailsService customUserDetailsService) {
+		this.jwtTokenProvider = jwtTokenProvider;
+		this.customUserDetailsService = customUserDetailsService;
+	}
+
 	// WebSecurityCustomizer: 특정 경로에 대해 Spring Security 필터 체인 무시
 	@Bean
 	public WebSecurityCustomizer webSecurityCustomizer() {
 		return (web) -> web.ignoring()
 				.requestMatchers("/oauth/**")
+//				.requestMatchers("/data/**")
 				.requestMatchers("/swagger-ui/**", "/v3/api-docs/**")
 				.requestMatchers("/static/**", "/css/**", "/js/**", "/images/**", "/favicon.ico");
 	}
@@ -35,14 +49,19 @@ public class SecurityConfig {
 	@Bean
 	public CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(List.of("http://localhost:300"));
-		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "POST", "DELETE", "OPTIONS"));
+		configuration.setAllowedOrigins(List.of("http://localhost:3000"));
+		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 		configuration.setAllowCredentials(true);
 		configuration.setMaxAge(3600L); // Pre-flight 요청 캐싱 시간(초)
 		
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
 		return source;
+	}
+	
+	@Bean
+	public JwtAuthenticationFilter jwtAuthenticationFilter() {
+		return new JwtAuthenticationFilter(jwtTokenProvider, customUserDetailsService);
 	}
 	
 	// SecurityFilterChain: HTTP 요청에 대한 보안 규칙 설정
@@ -53,8 +72,8 @@ public class SecurityConfig {
 		.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))	// 세션 관리 STATELESS로 설정
 		.authorizeHttpRequests(auth -> auth
 				.requestMatchers("/api/public/**").permitAll()	// 공개 API 접근 허용
-				.anyRequest().authenticated());
-		 // .addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class); // TODO: JWT 필터 추가
+				.anyRequest().authenticated())
+		.addFilterBefore(jwtAuthenticationFilter(), UsernamePasswordAuthenticationFilter.class);
 		
 		return http.build();
 	}
